unpackaged/objects/TariffPlan__c.object
<CustomObject>
    <description>Details about tariff plans</description>
    <fields>
        <fullName>Contact_no__c</fullName>
        <description>Contact number</description>
        <externalId>true</externalId>
        <label>Contact no</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Network__c</fullName>
        <label>Network</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujraj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telangana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamil Nadu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>S_no__c</fullName>
        <description>Serial numbers for mobile numbers</description>
        <label>S no</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Tariffplan__c</fullName>
        <description>Tariff plan name</description>
        <label>Tariffplan</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validity__c</fullName>
        <label>Validity</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nightly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <label>summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>TariffPlan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TariffPlan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TariffPlans</pluralLabel>
    <recordTypes>
        <fullName>North_India</fullName>
        <active>true</active>
        <label>North India</label>
    </recordTypes>
    <recordTypes>
        <fullName>South_India</fullName>
        <active>true</active>
        <label>South India</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>